--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,8 +21,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:amacocian@yahoo.com">email</a></li>
+	        		<li><a href="https://github.com/alexmacocian">github.com/AlexMacocian</a></li>
 				</ul>
 			</footer>
 		</body>
